# ros-eurobot-2019

./: .gitignore  Cheatsheet  Cheatsheet.md  camera_test.py  testfile.txt
eurobot_camera/: CMakeLists.txt  package.xml
eurobot_core/: CMakeLists.txt  package.xml
eurobot_display/: CMakeLists.txt  package.xml
eurobot_gui/: CMakeLists.txt  package.xml
eurobot_loc/: CMakeLists.txt  package.xml
eurobot_main/: CMakeLists.txt  package.xml
eurobot_nav/: CMakeLists.txt  package.xml
eurobot_nav/config/: .motion_planner_secondary_robot_params.yaml.swo  Nav.cfg  motion_planner_main_robot_params.yaml  motion_planner_main_robot_params.yaml~  motion_planner_secondary_robot_params.yaml  motion_planner_secondary_robot_params.yamz~
eurobot_nav/launch/: motion_planner_launch.launch  motion_planner_main_robot.launch  motion_planner_secondary_robot.launch  mp_launch.launch  nav.launch  test_nav_loc.launch
eurobot_nav/notebooks/: movement_animation2.ipynb
eurobot_nav/scripts/: ACC_DCL_to_goal_v01.py  MapPublisher.py  MotionPlannerNode.py  MotionPlannerNode0.py  RRT.py  ReadPath.py  Untitled.ipynb  arc_move_simple.py  arc_move_v01.py  arc_move_v02.py  collision_avoidance.py  demonstration.py  demonstration_rot.py  line_mov_test.py  motion_planner (copy).py  motion_planner.py  motion_planner_node.py  motion_planner_node.py~  path_planner.py  polygon_conversions.py  presa2.py  presentation.py  presentation.py~  simple_path_planner_test.py
eurobot_nav/src/: Astar.cpp  Astar.h  arc_move_v01.py  arc_move_v02.py  arc_move_v3.py  path_planner_node.cpp  path_planner_node.h
(+262 files in other folders)
